formタグ入れてみたｗｗｗ

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <div class="wrapper">
 <h1>エクセルデータをhtmlに変換します</h1>
 <h2>入力欄</h2>
+<form>
+<input type="checkbox">
 <div><textarea name="tsvInput" class="tsvInput tabIndent" id="tsvInput"></textarea></div>
 <div class="btnConvert"><input type="button" name="btnConvert" value="htmlに変換する" onclick="btnClick()"></div>
+</form>
 <h2>出力欄</h2>
 <div><textarea name="htmlOutput" class="htmlOutput"></textarea></div>
 </div>
