colspan処理入れてみた／うまく動かない

--- a/index.html
+++ b/index.html
@@ -29,11 +29,30 @@ function btnClick(){
 	//分ける
 	tableArray = inputText.split("\n");
 
-	// 繰り返す
+	// ２次元配列に入れる
 	for(i=0; i<tableArray.length; i++){
-		// 行を分割していく／タグに入力していく
 		tableArray[i] = tableArray[i].split("\t");
 	}
+
+	// colspan処理
+	for (var i = tableArray.length - 1; i >= 0; i--) {
+		for (var j = tableArray[i].length - 1; j >= 0; j--) {
+			if (tableArray[i][j] == "" && colspanArray[i][j] >= 1) {
+				colspanArray[i][j-1] =+ colspanArray[i][j] + 1;
+				colspanArray[i][j] = 0;
+			};
+			if (tableArray[i][j] == "" && colspanArray[i][j] == 0) {
+				colspanArray[i][j-1] =+1;
+			};
+		};
+	};
+	// for (var i = 0; i < tableArray.length; i++) {
+	// 	for (var j = 1; j < tableArray[i].length; j++) {
+	// 		if(tableArray[i][j]=="") {
+	// 			colspanArray[i][j-1]=+1;
+	// 		};
+	// 	};
+	// };
 
 	//配列を統合
 	var text = "<table>\n";
@@ -44,9 +63,17 @@ function btnClick(){
 
 		text = text + "\t<tr>";
 		for (j = 0; j < tableArray[i].length; j++) {
-			text = text + "<td>"+tableArray[i][j]+"</td>"
+			if (j>0) {
+				if (colspanArray[i][j]>0 && tableArray[i][j] != "") {
+					text = text + '<td colspan="'+colspanArray[i][j]+'">'+tableArray[i][j]+'</td>';
+				}else　if(colspanArray[i][j]==0 && tableArray[i][j] !=""){
+					text = text + "<td>"+tableArray[i][j]+"</td>";
+				};
+			}else{
+				text = text + "<td>"+tableArray[i][j]+"</td>";
+			};
 		};
-		text = text + "</tr>\n"
+		text = text + "</tr>\n";
 	};
 	text = text + "</table>";
 
